--- a/pokedex/src/components/perfil/perfil.css
+++ b/pokedex/src/components/perfil/perfil.css
@@ -18,29 +18,17 @@
 .perfil p { margin: 0; padding: 0;}
 
 .perfil-image {
-    border: 3px solid #e2e2e2;
     display: flex;
     justify-content: center;
-    border-radius: 100%;
-    padding: 50px;
     background: #fff;
-    position: absolute;
-    top: -80px;
-    left: -80px;
 }
 
 .poke-name {
-    position: absolute;
-    top: -35px;
-    left: 30px;
     font-size: 23px;
     color: #3c3c3c;
     text-transform: capitalize;
-}
-
-.perfil-image img {
-    position: absolute;
-    top: 20px;
+    text-align: center;
+    padding: 20px 0;
 }
 
 .types .type:first-child {
@@ -159,6 +147,7 @@
     color: rgb(112, 112, 112);
     flex-wrap: wrap;
     margin-top: 10px;
+    text-transform: capitalize;
 }
 
 .abilities h2 {
