--- a/pokedex/src/components/search/search.css
+++ b/pokedex/src/components/search/search.css
@@ -7,8 +7,8 @@
     border: 1px solid #e2e2e2;
     padding: 5px;
     font-family: 'Fira Sans';
-    border-right: none;
     outline: none;
+    margin-top: 20px;
 }
 
 .search button {
